--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
-src/main/resources/secrets.properties
+!**/src/main/resources/secrets.properties
 
 ### VS Code ###
 .vscode/
